--- a/src/Components/Intro/Intro.css
+++ b/src/Components/Intro/Intro.css
@@ -99,6 +99,7 @@
       flex-direction: column;
       height: 64rem;
       gap: 7rem;
+      margin-top: 1rem;
     }
     .i-right{
       transform: scale(0.8);
