--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -29,6 +29,7 @@
     padding: 10px;
     font-size: 16px;
     color: #5290fd;
+    cursor: pointer;
 }
 @media only screen and (max-width: 480px){
     .card{
