--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -11,7 +11,11 @@
 }
 .n-name{
     font-size: 1.3rem;
-    font-weight: 400;
+    font-weight: 500;
+    background-size: 400%;
+    background: linear-gradient(90deg, #ff0000, var(--orange), #ff00f3, #0033ff, #ff00c4, #ff0000);
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
 }
 .n-right{
     display: flex;
