--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -28,9 +28,15 @@
 }
 .portfolio img {
     width: 19rem;
+    height: 11rem;
     filter: drop-shadow(-12px 15px 13px rgba(0,0,0,0.25));
     border-radius: 19px;
 }
 .swiper-pagination-bullet-active{
-    background: var(--orange);
+    background-color: var(--orange) !important;
+}
+.portfolio .swiper-pagination-bullet{
+    width: 0.5rem;
+    height: 0.5rem;
+    /* margin: 0 15px!important */
 }
