--- a/src/Components/TextType/WhiteType.css
+++ b/src/Components/TextType/WhiteType.css
@@ -10,6 +10,8 @@
     justify-content: center;
     height: 10vh;
     background: #fff;
+    position: relative;
+    z-index: -51;
 }
 .wrapper{
     display: inline-flex;
@@ -57,3 +59,9 @@
 @keyframes typing {
     100%{left: 100%; margin: 0 -35px 0 35px}
 } 
+@media only screen and (max-width:480px) {
+    .txt-parent{
+        position: static;
+        width: 100%;
+    }
+}
